{
  "version": 4,
  "terraform_version": "1.1.2",
  "serial": 136,
  "lineage": "234ab22e-cb8c-72d7-8024-fc304c153abe",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "project-gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:942872595618:internet-gateway/igw-0aaf7793c78a51378",
            "id": "igw-0aaf7793c78a51378",
            "owner_id": "942872595618",
            "tags": {
              "Name": "DEVOPS16 Project Gateway"
            },
            "tags_all": {
              "Environment": "DEVOPS16-project",
              "Name": "DEVOPS16 Project Gateway"
            },
            "vpc_id": "vpc-0e4b13f5482462725"
          },
          "dependencies": [
            "aws_vpc.project-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb",
      "name": "devops16_alb_config",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-east-1:942872595618:loadbalancer/app/web-tier-loadbalancer/f4a9d6c3aae5fa7a",
            "arn_suffix": "app/web-tier-loadbalancer/f4a9d6c3aae5fa7a",
            "desync_mitigation_mode": "defensive",
            "dns_name": "web-tier-loadbalancer-1873323633.us-east-1.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_waf_fail_open": false,
            "id": "arn:aws:elasticloadbalancing:us-east-1:942872595618:loadbalancer/app/web-tier-loadbalancer/f4a9d6c3aae5fa7a",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "web-tier-loadbalancer",
            "security_groups": [
              "sg-02e2af56b3eb3c469"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-024371cdd3ffebc78"
              },
              {
                "subnet_id": "subnet-05c4789ec4f77fd55"
              }
            ],
            "subnets": [
              "subnet-024371cdd3ffebc78",
              "subnet-05c4789ec4f77fd55"
            ],
            "tags": {
              "Environment": "DEVOPS16 Project"
            },
            "tags_all": {
              "Environment": "DEVOPS16 Project",
              "Name": "DEVOPS16"
            },
            "vpc_id": "vpc-0e4b13f5482462725",
            "zone_id": "Z35SXDOTRQ7X7K"
          },
          "dependencies": [
            "aws_security_group.allow_web",
            "aws_subnet.project-subnet",
            "aws_subnet.project-subnet-2",
            "aws_vpc.project-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "devops16_listener_config",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:us-east-1:942872595618:listener/app/web-tier-loadbalancer/f4a9d6c3aae5fa7a/922b54c607b360a7",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:942872595618:targetgroup/web-tier-lb-targetgroup/e7849aa271777d67",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:942872595618:listener/app/web-tier-loadbalancer/f4a9d6c3aae5fa7a/922b54c607b360a7",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:us-east-1:942872595618:loadbalancer/app/web-tier-loadbalancer/f4a9d6c3aae5fa7a",
            "port": 80,
            "protocol": "HTTP",
            "ssl_policy": "",
            "tags": {},
            "tags_all": {
              "Environment": "DEVOPS16-project",
              "Name": "DEVOPS16"
            },
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_subnet.project-subnet",
            "aws_subnet.project-subnet-2",
            "aws_vpc.project-vpc",
            "aws_lb.devops16_alb_config",
            "aws_lb_target_group.devops16_lb_tg_config",
            "aws_security_group.allow_web"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener_rule",
      "name": "devops16_listener_rule_config",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:942872595618:targetgroup/web-tier-lb-targetgroup/e7849aa271777d67",
                "type": "forward"
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-east-1:942872595618:listener-rule/app/web-tier-loadbalancer/f4a9d6c3aae5fa7a/922b54c607b360a7/080a31b711669665",
            "condition": [
              {
                "host_header": [],
                "http_header": [],
                "http_request_method": [],
                "path_pattern": [
                  {
                    "values": [
                      "/static/*"
                    ]
                  }
                ],
                "query_string": [],
                "source_ip": []
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:942872595618:listener-rule/app/web-tier-loadbalancer/f4a9d6c3aae5fa7a/922b54c607b360a7/080a31b711669665",
            "listener_arn": "arn:aws:elasticloadbalancing:us-east-1:942872595618:listener/app/web-tier-loadbalancer/f4a9d6c3aae5fa7a/922b54c607b360a7",
            "priority": 99,
            "tags": {},
            "tags_all": {
              "Environment": "DEVOPS16-project",
              "Name": "DEVOPS16"
            }
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_subnet.project-subnet",
            "aws_subnet.project-subnet-2",
            "aws_vpc.project-vpc",
            "aws_lb.devops16_alb_config",
            "aws_lb_listener.devops16_listener_config",
            "aws_lb_target_group.devops16_lb_tg_config",
            "aws_security_group.allow_web"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "devops16_lb_tg_config",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:942872595618:targetgroup/web-tier-lb-targetgroup/e7849aa271777d67",
            "arn_suffix": "targetgroup/web-tier-lb-targetgroup/e7849aa271777d67",
            "connection_termination": false,
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 10,
                "interval": 30,
                "matcher": "200-400",
                "path": "/",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 3
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:942872595618:targetgroup/web-tier-lb-targetgroup/e7849aa271777d67",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "name": "web-tier-lb-targetgroup",
            "port": 80,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "tags_all": {
              "Environment": "DEVOPS16-project",
              "Name": "DEVOPS16"
            },
            "target_type": "instance",
            "vpc_id": "vpc-0e4b13f5482462725"
          },
          "dependencies": [
            "aws_vpc.project-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "project-routetable",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:942872595618:route-table/rtb-098cc7a516ccf2d3f",
            "id": "rtb-098cc7a516ccf2d3f",
            "owner_id": "942872595618",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0aaf7793c78a51378",
                "instance_id": "",
                "ipv6_cidr_block": "::/0",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              },
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0aaf7793c78a51378",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "DEVOPS16 Project Route Table"
            },
            "tags_all": {
              "Environment": "DEVOPS16-project",
              "Name": "DEVOPS16 Project Route Table"
            },
            "timeouts": null,
            "vpc_id": "vpc-0e4b13f5482462725"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.project-gateway",
            "aws_vpc.project-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-019278026f2487d00",
            "route_table_id": "rtb-098cc7a516ccf2d3f",
            "subnet_id": "subnet-05c4789ec4f77fd55"
          },
          "dependencies": [
            "aws_internet_gateway.project-gateway",
            "aws_route_table.project-routetable",
            "aws_subnet.project-subnet",
            "aws_vpc.project-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "allow_web",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:942872595618:security-group/sg-02e2af56b3eb3c469",
            "description": "Allow Web inbound traffic",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-02e2af56b3eb3c469",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "HTTP",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "HTTPS from VPC",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "SSH",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "allow_web_tracffic",
            "name_prefix": "",
            "owner_id": "942872595618",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "DEVOPS16 Project allow_web"
            },
            "tags_all": {
              "Environment": "DEVOPS16-project",
              "Name": "DEVOPS16 Project allow_web"
            },
            "timeouts": null,
            "vpc_id": "vpc-0e4b13f5482462725"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.project-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "project-subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:942872595618:subnet/subnet-05c4789ec4f77fd55",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-05c4789ec4f77fd55",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "942872595618",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "DEVOPS16 Project subnet"
            },
            "tags_all": {
              "Environment": "DEVOPS16-project",
              "Name": "DEVOPS16 Project subnet"
            },
            "vpc_id": "vpc-0e4b13f5482462725"
          },
          "dependencies": [
            "aws_vpc.project-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "project-subnet-2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:942872595618:subnet/subnet-024371cdd3ffebc78",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-024371cdd3ffebc78",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "942872595618",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "DEVOPS16 Project subnet 2"
            },
            "tags_all": {
              "Environment": "DEVOPS16-project",
              "Name": "DEVOPS16 Project subnet 2"
            },
            "vpc_id": "vpc-0e4b13f5482462725"
          },
          "dependencies": [
            "aws_vpc.project-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "project-vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:942872595618:vpc/vpc-0e4b13f5482462725",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-00b14c8c0eda45f7a",
            "default_route_table_id": "rtb-0c2b9ca7c7491e683",
            "default_security_group_id": "sg-0c08e5d77a8dbc60c",
            "dhcp_options_id": "dopt-0be5f8c97d44f1ac1",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "id": "vpc-0e4b13f5482462725",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0c2b9ca7c7491e683",
            "owner_id": "942872595618",
            "tags": {
              "Name": "DEVOPS16 Project VPC"
            },
            "tags_all": {
              "Environment": "DEVOPS16-project",
              "Name": "DEVOPS16 Project VPC"
            }
          }
        }
      ]
    }
  ]
}